<resources>
    <string name="app_name">MyMarket</string>
    <string name="password">password</string>
    <string name="email">email</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="register">Register</string>
    <string name="confirm_pass">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="full_name">Full name</string>
    <string name="create_user">Click here to create new account!</string>
    <string name="confirm_pass_not_same">password không giống!</string>
    <string name="password_require">Mật khẩu không được để trống</string>
    <string name="email_require">Email không được trống</string>
    <string name="home">Home</string>
    <string name="search">Tìm kiếm</string>
    <string name="profile">Cá nhân</string>
    <string name="need_to_sale">Cần bán</string>
    <string name="need_to_sale_title">Bạn muốn bán hay mua mặt hàng này?</string>
    <string name="need_to_buy">Cần mua</string>
    <string name="category">Danh mục mặt hàng</string>
    <string name="post_item">Đăng thông tin</string>
    <string name="click_to_select_image">Click here!</string>
    <string name="click_select_image">Click để chọn ảnh!</string>
    <string name="select_image">Chọn ảnh!</string>
    <string name="title_select_image">Thêm ảnh cho mặt hàng:</string>
    <string name="select_province">Tỉnh(thành phố)</string>
    <string name="select_price_over">Chọn khoảng giá</string>
    <string name="select_type_item">Loại tin: </string>
    <string name="name_title">Tên mặt hàng:</string>
    <string name="description_title">Mô tả mặt hàng:</string>
    <string name="detail_item_activity_title">Chi tiết mặt hàng</string>
    <string name="contact_to_user">Liên hệ người bán</string>
    <string name="address_title">Địa chỉ:</string>
    <string name="action_call">Thực hiện cuộc gọi</string>
    <string name="action_send_message">Gửi tin nhắn sms</string>
    <string name="add_address">Thêm địa chỉ bán hàng:</string>
    <string name="select_district">Quận huyện</string>
    <string name="input_address">Địa chỉ(số nhà, đường)</string>
    <string name="name_item">Tên mặt hàng</string>
    <string name="description_item">Thêm mô tả</string>
    <string name="price_item">Giá bán</string>
    <string name="select_category">Chọn danh mục</string>
    <string name="sell_item">Bán hàng</string>
    <string name="take_new_photo">Chụp ảnh mới.</string>
    <string name="take_photo">Chụp ảnh!</string>
    <string name="choose_image_from_gallery">Chọn ảnh từ bộ sưu tập.</string>
    <string name="add_photo_item">Thêm ảnh cho mặt hàng:</string>
    <string name="upload_item">Đang đăng thông tin mặt hàng</string>
    <string name="upload_item_to_show">Đang đăng thông tin mặt hàng. Vui lòng xem trạng thái tại thanh thông báo </string>
    <string name="upload_item_completed">Đăng thông tin hoàn tất!</string>
    <string name="my_stand">Gian hàng của tôi</string>
    <string name="my_items_upload">Tin bài đã đăng</string>
    <string name="mark">Đánh dấu</string>
    <string name="notification">Thông báo</string>
    <string name="my_notification">Thông báo của tôi </string>
    <string name="filter">Thực hiện lọc</string>
    <string name="setup_category">Thiết lập danh mục hiển thị:</string>
    <string name="all_category">Tất cả danh mục</string>
    <string name="setup_filter">Lọc nâng cao</string>
    <string name="setup_select_province">Thiết lập tỉnh, thành phố:</string>
    <string name="all">Tất cả</string>
    <string name="all_province">Tất cả tỉnh,thành phố</string>
    <string name="setup_select_district">Quận, huyện:</string>
    <string name="filter_price">Ưu tiên giá:</string>
    <string name="price_default">Mặc định</string>
    <string name="price_up">Tăng dần</string>
    <string name="price_down">Giảm dần</string>
    <string name="range_price_title">Khoảng giá:</string>
    <string name="price_from">Từ:</string>
    <string name="price_to">Đến:</string>
    <string name="save_filter">Lưu và thực hiện lọc</string>
    <string name="all_district">Tất cả quận, huyện</string>
    <string name="loading">Đang tải!</string>
    <string name="item_newest">Tin mới nhất</string>
    <string name="category_free">Miễn phí</string>
    <string name="not_set">Không thiết lập</string>
    <string name="mark_item_completed">Đánh dấu tin bài thành công!</string>
    <string name="unmark_item_completed">Hủy đánh dấu tin bài thành công!</string>
    <string name="item_marked">Tin bài đánh dấu</string>
    <string name="click_to_set_user_to_seller">Để tạo gian hàng riêng, bạn cần xác nhận bạn là người bán chuyên!</string>
    <string name="confirm_now">Xác nhận ngay</string>
    <string name="name_stand">Tên gian hàng</string>
    <string name="description_stand">Giới thiệu gian hàng</string>
    <string name="detail_description_stand">*Mô tả ngắn gọn về gian hàng sẽ giúp người dùng tìm kiếm dễ dàng hơn</string>
    <string name="create_stand">Tạo gian hàng</string>
    <string name="create_stand_new">Tạo gian hàng mới</string>
    <string name="create_now">Tạo ngay</string>
    <string name="create_stand_completed">Tạo gian hàng thành công</string>
    <string name="stand">Gian Hàng</string>
    <string name="list_stand">Gian hàng nổi bật</string>
    <string name="require_image_stand">Bạn nên chọn(chụp) ảnh ngang để gian hàng trông đẹp hơn</string>
    <string name="undo_delete">Hoàn tác</string>
    <string name="deleting_item">Xóa một tin bài!</string>
    <string name="deleting_notification">Xóa thông báo!</string>
    <string name="can_not_delete">Không thể xóa ! Vui lòng thử lại!</string>
    <string name="not_have_item">Danh sách rỗng!</string>
    <string name="sold">Đã bán</string>
    <string name="bought">Đã mua</string>
    <string name="delete">Xóa bỏ</string>
    <string name="item">Mặt hàng</string>
    <string name="information">Thông tin</string>
    <string name="today">Hôm nay, lúc %s</string>
    <string name="follow">Theo dõi gian hàng</string>
    <string name="add_item_to_stand">Thêm vào gian hàng</string>
    <string name="title_add_item_to_stand">Thêm mặt hàng mới vào gian hàng</string>
    <string name="category_stand_intro">*Thiết lập danh mục sẽ giúp quản lý tốt hơn</string>
    <string name="please_input_full_information">Vui lòng điền đầy đủ thông tin!</string>
    <string name="time_post">Thời gian đăng tin:</string>
    <string name="follow_completed">Theo dõi gian hàng thành công!</string>
    <string name="follow_un_completed">Theo dõi gian hàng không thành công!</string>
    <string name="un_follow">Hủy theo dõi</string>
    <string name="un_follow_completed">Hủy theo dõi thành công!</string>
    <string name="un_follow_un_completed">Hủy theo dõi không thành công!</string>
    <string name="action_edit">Chỉnh sửa thông tin</string>
    <string name="thosand">%s nghìn đồng</string>
    <string name="bilion">%s triệu đồng</string>
    <string name="yet">Vừa mới đây</string>
    <string name="yesterday">Hôm  qua, %s</string>
    <string name="click_to_show">Click để xem!</string>
    <string name="select_province_where_you_live">Chọn Tỉnh(thành phố) nơi bạn đang sống</string>
    <string name="stand_followed">Gian hàng đã theo dõi</string>
    <string name="change_pass">Đổi mật khẩu</string>
    <string name="notification_setup">Cài đặt thông báo</string>
    <string name="delete_completed">Xóa thành công!</string>
    <string name="receive_notification">Nhận thông báo</string>
    <string name="on">Mở</string>
    <string name="off">Tắt</string>
    <string name="notification_introduce">* Khi tắt thông báo, bạn cũng sẽ không nhận tin từ gian hàng bạn đã đăng ký.</string>
    <string name="filter_setup_notification">Cài đặt bộ lọc thông báo </string>
    <string name="save_setup">Lưu cài đặt</string>
    <string name="turn_off_notification">Tắt thông báo</string>
    <string name="turn_on_notification">Bật thông báo</string>
    <string name="save_completed">Lưu cài đặt thông báo thành công</string>
    <string name="save_err">Lưu thất bại, vui lòng thử lại</string>
    <string name="password_old">Mật khẩu cũ</string>
    <string name="password_new">Mật khẩu mới</string>
    <string name="change">Thay đổi</string>
    <string name="cancel">Hủy bỏ</string>
    <string name="re_password_new">Nhập lại mật khẩu</string>
    <string name="change_pass_completed">Đổi mật khẩu thành công!</string>
    <string name="request_transaction">Gửi yêu cầu xác nhận giao dịch</string>
    <string name="confirm">Xác nhận</string>
    <string name="item_my_transaction">Giao dịch của tôi</string>
    <string name="title_activity_maps">Map</string>
    <string name="price_transaction">Giá giao dịch</string>
    <string name="information_user">Thông tin đối tác</string>
    <string name="add_new">Thêm mới</string>
    <string name="add_from_transaction">Thêm từ giao dịch</string>
    <string name="click_to_add_to_stand">Nhấp vào giao dịch để thêm mặt hàng vào gian hàng</string>
    <string name="user_manager">Quản lý người dùng</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="Admin">Admin</string>
    <string name="item_manager">Quản lý bài đăng</string>
    <string name="time_join">Ngày tham gia: </string>
    <string name="request_transaction_completed">Gửi yêu cầu giao dịch thành công!</string>
    <string name="request_transaction_err">Người dùng tạm thời đã đăng xuất ra khỏi hệ thống, hãy liên lạc qua số điện thoại!</string>
    <string name="title_coordinator">Xác định tọa độ</string>
    <string name="use_current_address">Sử dụng vị trí hiện tại</string>
    <string name="lets_go">Bắt đầu</string>
    <string name="need_select_province_before">Bạn cần chọn tỉnh thành trước!</string>
    <string name="write_comment">Nhận xét gian hàng</string>
    <string name="comment">Xác nhận</string>
    <string name="input_comment">Nhập đánh giá của bạn</string>
    <string name="comment_require">Vui lòng nhập đánh giá</string>
    <string name="comment_success">Thêm nhận xét thành công!</string>
    <string name="view_on_map">Xem trên bản đồ</string>
    <string name="map_type_normal">Mặc định</string>
    <string name="map_type_satellite">Vệ tinh</string>
    <string name="map_type_terrain">Địa hình</string>
    <string name="call_now">Gọi ngay</string>
    <string name="send_message">Gửi tin nhắn</string>
    <string name="show_detail">Xem chi tiết</string>
    <string name="radius">Bán kính(Km)</string>
    <string name="select_on_map">Chọn trên bản đồ</string>
    <string name="not_empty">Không được bỏ trống</string>
    <string name="map_not_ready">Bản đồ chưa sẵn sàng. Vui lòng chờ!</string>
    <string name="update_avatar">Cập nhật ảnh đại diện</string>
    <string name="edit_item">Chỉnh sửa thông tin mặt hàng</string>
    <string name="delete_old_image">Xóa bỏ các ảnh cũ</string>
    <string name="save_edit">Lưu thay đổi</string>
    <string name="input_coordinate">Vui lòng nhập tọa độ</string>
    <string name="have_err">Đã có lỗi xay ra. Vui lòng thử lại</string>
    <string name="delete_stand_warning">Bạn có chắc muốn xóa gian hàng này?</string>
    <string name="login_expire">Phiên đăng nhập của bạn đã hết hạn. Vui lòng đăng nhập lại!</string>
    <string name="edit_stand">Chỉnh sửa thông tin gian hàng</string>
    <string name="edit_stand_completed">Cập nhật thông tin gian hàng thành công!</string>
    <string name="update">Cập nhật</string>
    <string name="seller">Bán chuyên</string>
</resources>