<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <include
        android:id="@+id/toolbarLayout"
        layout="@layout/app_bar_layout" />



        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            >
            <android.support.v7.widget.CardView
                style="@style/CardViewStyle"
                android:layout_margin="@dimen/_5dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/toggleTitle"
                style="@style/TextAppStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/receive_notification"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.SwitchCompat
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textOff="@string/off"
                android:layout_gravity="right"
                android:textOn="@string/on"
                app:layout_constraintRight_toRightOf="parent" />
            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

</android.support.design.widget.CoordinatorLayout>