<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <android.support.constraint.ConstraintLayout
        android:fitsSystemWindows="true"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.AppCompatTextView
            android:text="@string/need_to_sale_title"
            android:id="@+id/titleNeedToSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <RadioGroup
            app:layout_constraintTop_toBottomOf="@+id/titleNeedToSale"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:orientation="horizontal"
            android:id="@+id/radioGroupNeedToSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatRadioButton
                android:layout_marginRight="@dimen/_10dp"
                android:button="@null"
                android:padding="@dimen/_5dp"
                android:id="@+id/radioNeedToSale"
                android:text="@string/need_to_sale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatRadioButton
                android:button="@null"
                android:padding="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:id="@+id/radioNeedToBuy"
                android:text="@string/need_to_buy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </RadioGroup>
    </android.support.constraint.ConstraintLayout>
</layout>