<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_40dp"
    android:background="@color/colorTransparent"
    >

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/_30dp"
        android:background="@drawable/bg_dialog">
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/titleDialog"
            style="@style/TextAppStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_20dp"
            android:layout_marginRight="@dimen/_20dp"
            android:background="@drawable/bg_title_dialog"
            android:elevation="@dimen/_5dp"
            android:padding="@dimen/_10dp"
            android:singleLine="true"
            android:textAlignment="center"
            android:textColor="@color/colorWhite"
            android:textSize="@dimen/_15sp"
            app:layout_constraintBottom_toTopOf="@+id/rootViewEdit"
            app:layout_constraintTop_toTopOf="@+id/rootViewEdit"
            android:text="@string/change_pass"
            />

        <android.support.constraint.ConstraintLayout
            android:id="@+id/rootViewEdit"
            android:layoutMode="clipBounds"
            android:layout_marginTop="@dimen/_30dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/bg_recycleview_dialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_30dp"
            android:paddingRight="@dimen/_10dp"
            android:paddingLeft="@dimen/_10dp"
            android:paddingBottom="@dimen/_30dp"
            >
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtPasswordOld"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                android:textColor="@color/colorText"
                android:hint="@string/password_old"
                android:textColorHint="@color/blue_grey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtPasswordNew"
                style="@style/EditTextStyle"
                android:inputType="textPassword"
                app:layout_constraintTop_toBottomOf="@+id/edtPasswordOld"
                android:textColor="@color/colorText"
                android:textColorHint="@color/blue_grey"
                android:hint="@string/password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/edtRePasswordNew"
                android:inputType="textPassword"
                style="@style/EditTextStyle"
                app:layout_constraintTop_toBottomOf="@+id/edtPasswordNew"
                android:textColor="@color/colorText"
                android:textColorHint="@color/blue_grey"
                android:hint="@string/re_password_new"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </android.support.constraint.ConstraintLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCancel"
            android:text="@string/cancel"
            style="@style/ButtonAppStyle"
            android:background="@drawable/bg_button_cancel"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginLeft="@dimen/_10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rootViewEdit"
            app:layout_constraintBottom_toBottomOf="@+id/rootViewEdit"
            android:layout_width="wrap_content"
            />
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnChange"
            style="@style/ButtonAppStyle"
            android:text="@string/change"
            android:background="@drawable/bg_button_ok"
            android:layout_marginTop="@dimen/_10dp"
            android:layout_marginRight="@dimen/_10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rootViewEdit"
            app:layout_constraintBottom_toBottomOf="@+id/rootViewEdit"
            android:layout_width="wrap_content"
             />
    </android.support.constraint.ConstraintLayout>

</FrameLayout>