<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/appBarLayout"
        layout="@layout/app_bar_layout" />
    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:fitsSystemWindows="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10dp"
       >
        <android.support.design.card.MaterialCardView
            android:id="@+id/cardViewImageSelect"
            android:layout_width="wrap_content"
            app:cardCornerRadius="@dimen/_8dp"
            android:layout_height="wrap_content">
        <com.example.dainv.mymarket.viewcustom.ImageCategory
            android:id="@+id/imageSelect"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        </android.support.design.card.MaterialCardView>
        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAppStyle"
            android:layout_marginLeft="@dimen/_5dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/txtDesImage"
            android:text="@string/require_image_stand"
            android:textSize="@dimen/_10sp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewImageSelect"
            android:layout_width="match_parent"
            android:textColor="@color/colorBgTxtBuy"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            style="@style/CardViewStyle"
            android:layout_marginTop="@dimen/_5dp"
            app:cardBackgroundColor="@android:color/holo_blue_light"
            android:id="@+id/cardViewSelectImage"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/cardViewTakeImage"
            app:layout_constraintTop_toBottomOf="@+id/txtDesImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:padding="@dimen/_5dp"
                android:textColor="@color/colorWhite"
                android:text="@string/select_image"
                style="@style/TextAppStyle"
                android:textSize="@dimen/_13dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
        style="@style/CardViewStyle"
            android:layout_marginTop="@dimen/_5dp"
        app:cardBackgroundColor="@android:color/holo_red_light"
        android:id="@+id/cardViewTakeImage"
        app:layout_constraintLeft_toRightOf="@+id/cardViewSelectImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtDesImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:padding="@dimen/_5dp"
            android:textColor="@color/colorWhite"
            android:text="@string/take_photo"
            style="@style/TextAppStyle"
            android:textSize="@dimen/_13dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </android.support.v7.widget.CardView>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutName"
            style="@style/TextInputGrayLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@+id/cardViewSelectImage">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtName"
                style="@style/EditTextGrayInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5dp"
                android:hint="@string/name_stand"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/_3dp"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutDescription"
            style="@style/TextInputGrayLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutName">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtDescription"
                style="@style/EditTextGrayInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5dp"
                android:hint="@string/description_stand"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:paddingStart="@dimen/_3dp"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatTextView
            style="@style/TextAppStyle"
            android:layout_marginLeft="@dimen/_12dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:id="@+id/txtDetail"
            android:text="@string/detail_description_stand"
            android:textSize="@dimen/_10sp"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_10dp"
            style="@style/TextAppStyle"
            app:layout_constraintTop_toBottomOf="@+id/txtDetail"
            android:id="@+id/titleAddAddress"
            android:text="@string/add_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.CardView
            android:id="@+id/cardProvince"
            android:layout_marginRight="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            style="@style/CardViewStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/titleAddAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/txtProvince"
                android:padding="@dimen/_5dp"
                style="@style/TextAppStyle"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textAlignment="center"
                android:text="@string/select_province"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/cardDistrict"
            android:layout_marginRight="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            style="@style/CardViewStyle"
            android:layout_marginTop="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@id/cardProvince"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.v7.widget.AppCompatTextView
                android:enabled="false"
                android:singleLine="true"
                android:ellipsize="marquee"
                android:textAlignment="center"
                android:id="@+id/txtDistrict"
                android:padding="@dimen/_5dp"
                style="@style/TextAppStyle"
                android:text="@string/select_district"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </android.support.v7.widget.CardView>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/txtLayoutAddress"
            style="@style/TextInputGrayLayoutStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_5dp"
            android:layout_marginLeft="@dimen/_5dp"
            android:layout_marginTop="@dimen/_15dp"
            app:layout_constraintTop_toBottomOf="@+id/cardDistrict">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edtAddress"
                style="@style/EditTextGrayInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="@dimen/_5dp"
                android:hint="@string/input_address"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:textColorHighlight="@color/colorPrimary"
                android:paddingStart="@dimen/_3dp"
                android:textColor="@color/colorText" />
        </android.support.design.widget.TextInputLayout>
        <android.support.v7.widget.AppCompatButton
            android:id="@+id/btnCreate"
            style="@style/ButtonAppStyle"
            android:paddingLeft="@dimen/_20dp"
            android:paddingRight="@dimen/_20dp"
            app:layout_constraintTop_toBottomOf="@+id/txtLayoutAddress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/create_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <include
            android:id="@+id/loadingLayout"
            android:visibility="gone"
            layout="@layout/dialog_loading"/>
    </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>