<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
    </data>
    <android.support.constraint.ConstraintLayout
        android:id="@+id/rootView"
        android:clickable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.AppCompatTextView
            android:padding="@dimen/_10dp"
            android:id="@+id/title"
            style="@style/TextAppStyle"
            android:textSize="@dimen/_18sp"
            android:text="@string/contact_to_user"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <android.support.v7.widget.LinearLayoutCompat
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            android:padding="@dimen/_10dp"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:id="@+id/actionOne"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/icOne"
                android:layout_gravity="center_vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/titleOne"
                style="@style/TextAppStyle"
                android:padding="@dimen/_5dp"
                android:layout_marginLeft="@dimen/_10dp"
                android:textSize="@dimen/_16sp"
                android:text="@string/action_call"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </android.support.v7.widget.LinearLayoutCompat>
        <android.support.v7.widget.LinearLayoutCompat
            android:padding="@dimen/_10dp"
            android:clickable="true"
            android:background="?attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/actionOne"
            android:id="@+id/actionTwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/icTwo"
                android:layout_width="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_height="wrap_content" />
            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/titleTwo"
                style="@style/TextAppStyle"
                android:layout_marginLeft="@dimen/_10dp"
                android:padding="@dimen/_5dp"
                android:textSize="@dimen/_16sp"
                android:text="@string/action_send_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </android.support.v7.widget.LinearLayoutCompat>
    </android.support.constraint.ConstraintLayout>
</layout>
